# ForgeBoard

Desktop/ForgeBoard/: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
Desktop/ForgeBoard/bom_ai_engine/: __init__.py  assistant.py  cli.py  engine.py  langchain_client.py  models.py  reporting.py  workflow.py  xlsx_reader.py
Desktop/ForgeBoard/bom_ai_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Desktop/ForgeBoard/docs/: client_presentation_guide.md  client_solution_outline.md  cs_electrics_pitch_deck.md  excel_sheets_client_guide.md  finished_goods_tab_guide.md  forgeboard_solution_blueprint.md  materials_tab_guide.md  overview_tab_guide.md  sidebar_guide.md
Desktop/ForgeBoard/examples/: priority_hints.example.json  procurement.example.json
Desktop/ForgeBoard/tests/: test_assistant.py  test_engine.py  test_langchain_client.py  test_reporting.py  test_workflow.py
